Filtro en mis propiedades

--- a/views/agent_list.html
+++ b/views/agent_list.html
@@ -9,7 +9,7 @@
         <h5 class="mb-0">
             <button type="button" class="buttonOverview btn btn-outline-dark" data-toggle="collapse"
                     data-target="#agentFilter"
-                    aria-expanded="false" aria-controls="propertyFilter">
+                    aria-expanded="false" aria-controls="agentFilter">
                 <span class="fas fa-search"></span><span class="font-weight-bold">Filtro de Agentes</span>
             </button>
         </h5>
