--- a/views/property_add.html
+++ b/views/property_add.html
@@ -51,7 +51,14 @@
         <!-- DATOS COMUNES --------------------------------------------------------------------------------------------------------------------------------------------------->
         <div id="divAttCommon" style="display: none;">
             <div class="div-field form-row">
-                <div class="form-group col-sm-6">
+                <div class="form-group col-sm-4">
+                    <label class="control-label" for="code">Código:</label>
+                    <div>
+                        <input id='code' type="text" class="form-control" name="code"
+                               placeholder="Ej. V001"/>
+                    </div>
+                </div>
+                <div class="form-group col-sm-4">
                     <label class="control-label" for="type">Tipo:</label>
                     <div>
                         <select id='type' class="form-control" name="type">
@@ -64,7 +71,7 @@
                         </select>
                     </div>
                 </div>
-                <div class="form-group col-sm-6">
+                <div class="form-group col-sm-4">
                     <label class="control-label" for="typeOp">Tipo de Operación:</label>
                     <div>
                         <select id='typeOp' class="form-control" name="typeOp">
