--- a/views/property_details.html
+++ b/views/property_details.html
@@ -30,6 +30,9 @@
 
 <div class="container">
     <h2 class="sectionHeader">Detalles de "{{property.name}}"</h2>
+    {% if user.permission == 'A' || user.permission == 'S' %}
+    <h3 class="sectionHeader">Código: "{{property.code}}"</h3>
+    {% endif %}
 
     <!-- DATOS DE PROPIETARIO -->
     {% if user.permission == 'A' || user.permission == 'S' %}
