--- a/views/property_modify.html
+++ b/views/property_modify.html
@@ -35,14 +35,21 @@
             </div>
 
             <div class="div-field form-row">
-                <div class="form-group col-sm-6">
+                <div class="form-group col-sm-4">
+                    <label class="control-label" for="code">Código:</label>
+                    <div>
+                        <input id='code' type="text" class="form-control" name="code"
+                              value="{{property.code}}" placeholder="Ej. V001"/>
+                    </div>
+                </div>
+                <div class="form-group col-sm-4">
                     <label class="control-label" for="name">Nombre:</label>
                     <div>
                         <input type="text" class="form-control" name="name" value="{{property.name}}"
                                placeholder="Ej. Chalet con Piscina en el Centro"/>
                     </div>
                 </div>
-                <div class="form-group col-sm-6">
+                <div class="form-group col-sm-4">
                     <label class="control-label" for="typeOp">Tipo de Operación:</label>
                     <div>
                         <select id='typeOp' class="form-control" name="typeOp">
