Crear el modulo utilities para sacar funciones de ayuda

--- a/views/property_modify.html
+++ b/views/property_modify.html
@@ -182,7 +182,7 @@
                     <label class="form-check-label" for="checkPiscina">Piscina</label>
                 </div>
                 <div class="form-check col-sm-2">
-                    {% if property.piscina == 'Si' %}
+                    {% if property.terraza == 'Si' %}
                     <input type="checkbox" class="form-check-input" name="checkTerraza" checked>
                     {% else %}
                     <input type="checkbox" class="form-check-input" name="checkTerraza">
@@ -190,7 +190,7 @@
                     <label class="form-check-label" for="checkTerraza">Terraza</label>
                 </div>
                 <div class="form-check col-sm-2">
-                    {% if property.piscina == 'Si' %}
+                    {% if property.trastero == 'Si' %}
                     <input type="checkbox" class="form-check-input" name="checkTrastero" checked>
                     {% else %}
                     <input type="checkbox" class="form-check-input" name="checkTrastero">
@@ -198,7 +198,7 @@
                     <label class="form-check-label" for="checkTrastero">Trastero</label>
                 </div>
                 <div class="form-check col-sm-2">
-                    {% if property.piscina == 'Si' %}
+                    {% if property.jardin == 'Si' %}
                     <input type="checkbox" class="form-check-input" name="checkJardin" checked>
                     {% else %}
                     <input type="checkbox" class="form-check-input" name="checkJardin">
@@ -206,7 +206,7 @@
                     <label class="form-check-label" for="checkJardin">Jardín</label>
                 </div>
                 <div class="form-check col-sm-2">
-                    {% if property.piscina == 'Si' %}
+                    {% if property.ascensor == 'Si' %}
                     <input type="checkbox" class="form-check-input" name="checkAscensor" checked>
                     {% else %}
                     <input type="checkbox" class="form-check-input" name="checkAscensor">
@@ -216,7 +216,7 @@
             </div>
             <div class="div-field form-row">
                 <div class="form-check col-sm-2">
-                    {% if property.piscina == 'Si' %}
+                    {% if property.calefaccion == 'Si' %}
                     <input type="checkbox" class="form-check-input" name="checkCalefaccion" checked>
                     {% else %}
                     <input type="checkbox" class="form-check-input" name="checkCalefaccion">
@@ -224,7 +224,7 @@
                     <label class="form-check-label" for="checkCalefaccion">Calefacción</label>
                 </div>
                 <div class="form-check col-sm-2">
-                    {% if property.piscina == 'Si' %}
+                    {% if property.aireAcon == 'Si' %}
                     <input type="checkbox" class="form-check-input" name="checkAireAcon" checked>
                     {% else %}
                     <input type="checkbox" class="form-check-input" name="checkAireAcon">
@@ -232,7 +232,7 @@
                     <label class="form-check-label" for="checkAireAcon">Aire Acondicionado</label>
                 </div>
                 <div class="form-check col-sm-2">
-                    {% if property.piscina == 'Si' %}
+                    {% if property.amueblado == 'Si' %}
                     <input type="checkbox" class="form-check-input" name="checkAmueblado" checked>
                     {% else %}
                     <input type="checkbox" class="form-check-input" name="checkAmueblado">
@@ -240,7 +240,7 @@
                     <label class="form-check-label" for="checkAmueblado">Amueblado</label>
                 </div>
                 <div class="form-check col-sm-2">
-                    {% if property.piscina == 'Si' %}
+                    {% if property.animales == 'Si' %}
                     <input type="checkbox" class="form-check-input" name="checkAnimales" checked>
                     {% else %}
                     <input type="checkbox" class="form-check-input" name="checkAnimales">
