--- a/views/agent_list.html
+++ b/views/agent_list.html
@@ -2,6 +2,13 @@
 
 {% block contenido_principal %}
 
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="/">Inicio</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Agentes</li>
+    </ol>
+</nav>
+
 <div class="container">
     <h2 class="sectionHeader">Mis Publicaciones</h2>
 
