--- a/views/property_add.html
+++ b/views/property_add.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %} {% block titulo %} ARCA Inmobiliaria {% endblock %} {% block contenido_principal %}
-
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="/">Inicio</a></li>
+        <li class="breadcrumb-item"><a href="/myproperties">Mis Propiedades</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Añadir</li>
+    </ol>
+</nav>
 <div class="container">
     <h2 class="sectionHeader">¿Qué tipo de propiedad desea añadir?</h2>
     <form class="form-horizontal" method="post" action="/properties/add" encType="multipart/form-data">
