--- a/views/property_modify.html
+++ b/views/property_modify.html
@@ -6,6 +6,14 @@
 </head>
 <body>
 {% extends "base.html" %} {% block titulo %} ARCA Inmobiliaria {% endblock %} {% block contenido_principal %}
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="/">Inicio</a></li>
+        <li class="breadcrumb-item"><a href="/myproperties">Mis Propiedades</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Editar</li>
+    </ol>
+</nav>
+
 
 <div class="container">
     <h2 class="sectionHeader">Edite los campos deseados</h2>
