--- a/views/agent_modify.html
+++ b/views/agent_modify.html
@@ -3,7 +3,13 @@
 {% block titulo %} ARCA Inmobiliaria {% endblock %}
 
 {% block contenido_principal %}
-
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="/">Inicio</a></li>
+        <li class="breadcrumb-item"><a href="/agents">Agentes</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Modificar</li>
+    </ol>
+</nav>
 <div class="container">
     <h2 class="sectionHeader">Editar Agente</h2>
     <h3>Si deja un campo vacío, éste mantendrá su estado original.</h3>
