--- a/views/info_contact.html
+++ b/views/info_contact.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 {% block titulo %} ARCA Inmobiliaria {% endblock %}
 {% block contenido_principal %}
-
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="/">Inicio</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Contacto</li>
+    </ol>
+</nav>
 <div class="container">
     <h2 class="sectionHeader">Información de Contacto</h2>
     <p>Si desea contactar con nosotros, le ofrecemos tres formas diferentes de hacerlo:</p>
