--- a/views/info_statistics.html
+++ b/views/info_statistics.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %} {% block titulo %} ARCA Inmobiliaria {% endblock %}
 
 {% block contenido_principal %}
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="/">Inicio</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Estadísticas</li>
+    </ol>
+</nav>
 <div class="container">
     <h2 class="sectionHeader">Estadísticas</h2>
     <h3 class="sectionHeader">Propiedades Seguidas por sus Clientes</h3>
