Convirtiendo mongoDB a mongoose - System

--- a/views/info_contact.html
+++ b/views/info_contact.html
@@ -47,7 +47,7 @@
     </div>
     <div id="editInfo" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
         <div class="filter-collapse card-body">
-            <form class="form-horizontal" method="post" action="/info/edit">
+            <form class="form-horizontal" method="post" action="/info/contact/edit">
                 <div class="div-field form-row">
                     <label class="control-label" for="phones">Números de Teléfono, separados por comas:</label>
                     <div class="col-sm-12">
