--- a/views/base.html
+++ b/views/base.html
@@ -121,7 +121,7 @@
                 {% endif %}
                 {% if user.permission != undefined %}
                 <li class="nav-item active">
-                    <a class="nav-link" href="/messages">Mensajes</a>
+                    <a class="nav-link" href="/conversations">Mensajes</a>
                 </li>
                 {% endif %}
                 <li class="nav-item active">
