--- a/public/styles/css/style.css
+++ b/public/styles/css/style.css
@@ -232,3 +232,50 @@ dt {
     color: #373737;
     background-color: white;
 }
+
+.img-table{
+    height: 8em;
+    width: 10em;
+}
+
+.message-container {
+    width: 100%;
+    height: 75%;
+}
+
+
+.message-pl,
+.message-pr{
+    margin-top: 0.25em;
+    margin-bottom: 0.25em;
+    padding-top: 0.25em;
+    padding-bottom: 0.25em;
+    border-radius: 1em;
+    min-width: 15%;
+    text-align: left;
+    color: black;
+    overflow:hidden;
+    word-wrap: break-word;
+    max-width: 75%;
+    width: fit-content;
+}
+
+.message-pl{
+    padding-left: 0.5em;
+    padding-right: 1em;
+    background-color: #D0D0D0;
+    margin-left: 0;
+    margin-right: auto;
+}
+
+.message-pr{
+    padding-left: 1em;
+    padding-right: 0.5em;
+    background-color: #AFDFF5 ;
+    margin-left: auto;
+    margin-right: 0;
+}
+
+.input-chat{
+    margin-top: 2em;
+}
