--- a/views/property_list.html
+++ b/views/property_list.html
@@ -367,7 +367,7 @@
     {% for property in properties %}
     <div class="displayDiv row">
         <div class="col-3">
-            <img class='imgLogo' src="/propertiesimg/{{ property._id.toString() }}/{{ property._id.toString() }}_0.png" alt="logo"/>
+            <img class='imgLogo' src="/propertiesimg/{{ property._id.toString() }}/{{ property._id.toString() }}_0.png" alt="Imagen de la propiedad"/>
         </div>
         <div class="col-9">
             <a class="displayProperty" id="displayProperty" href="/properties/details/{{ property._id.toString() }}">
