--- a/public/styles/css/style.css
+++ b/public/styles/css/style.css
@@ -238,12 +238,6 @@ dt {
     width: 10em;
 }
 
-.message-container {
-    width: 100%;
-    height: 75%;
-}
-
-
 .message-pl,
 .message-pr{
     margin-top: 0.25em;
@@ -263,7 +257,7 @@ dt {
 .message-pl{
     padding-left: 0.5em;
     padding-right: 1em;
-    background-color: #D0D0D0;
+    background-color: #E0E0E0;
     margin-left: 0;
     margin-right: auto;
 }
@@ -278,4 +272,8 @@ dt {
 
 .input-chat{
     margin-top: 2em;
+}
+
+.message-container{
+    margin-top: 4em;
 }
